--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -1,100 +1,82 @@
-.SearchBar{
-
-    position: absolute;
-    width: 100vw;
-    height: 50px;
-    top:5vh;
+.SearchBar {
+  position: absolute;
+  width: 100vw;
+  height: 50px;
+  top: 5vh;
+  display: flex;
+  justify-content: center;
+  .form {
+    width: 55vw;
     display: flex;
-    justify-content: center;
-    .form{
-        width:55vw;
-        display: flex;
-        align-items: center;
-        input{
-            border-radius: 7px;
-            height: 30px;
-            width: 50vw;
-            box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-            border: solid 1px white ;
-        }
-        button{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            margin-left: 10px;
-            padding: 16px;
-            border-radius: 7px;
-            height: 30px;
-            width: 5vw;
-
-            box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -1px, rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
-        }
-        button:hover{
-            color: white;
-            cursor: pointer;
-            background-color: rgb(180,217,247);
-        }
-
+    align-items: center;
+    input {
+      border-radius: 7px;
+      height: 30px;
+      width: 50vw;
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+        rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+      border: solid 1px white;
     }
-    .searchResultsList{
-        .searchResults{
-            
-        }
-    }
+    button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
+      margin-left: 10px;
+      padding: 16px;
+      height: 30px;
+      width: 5vw;
+      border-radius: 7px;
+      box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px,
+        rgba(0, 0, 0, 0.3) 0px 3px 7px -1px,
+        rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
+    }
+    button:hover {
+      color: white;
+      cursor: pointer;
+      background-color: rgb(180, 217, 247);
+    }
+  }
+  .searchResultsList {
+    .searchResults {
+    }
+  }
 }
 
-@media (max-width:900px) {
-    .SearchBar{
-
-        form{
-
-            input{
-            }
-            button{
-                
-            }
-            
-        }
-        .searchResultsList{
-            .searchResults{
-                
-            }
-        }
-    
-        
+@media (max-width: 900px) {
+  .SearchBar {
+    form {
+      input {
+      }
+      button {
+      }
     }
-    
+    .searchResultsList {
+      .searchResults {
+      }
+    }
+  }
 }
 
-@media (prefers-color-scheme:dark) {
-    .SearchBar{
-
-        .form{
-
-            input{
-            }
-            button{
-                border-radius: 7px;
-                color: white;
-                border-color: none;
-                border: none;
-                background-color: #FF6410;
-                
-            }
-            button:hover{
-                background-color: #983f10;
-            }
-            
-        }
-        .searchResultsList{
-            .searchResults{
-                
-            }
-        }
-    
-        
+@media (prefers-color-scheme: dark) {
+  .SearchBar {
+    .form {
+      input {
+      }
+      button {
+        border-radius: 7px;
+        color: white;
+        border-color: none;
+        border: none;
+        background-color: #ff6410;
+      }
+      button:hover {
+        background-color: #983f10;
+      }
     }
-       
+    .searchResultsList {
+      .searchResults {
+      }
+    }
+  }
 }
