--- a/src/components/UserAside/UserAside.module.scss
+++ b/src/components/UserAside/UserAside.module.scss
@@ -1,312 +1,315 @@
 .UserAside {
-    position: absolute;
+  position: absolute;
 
-    left: 3vw;
-    width: 20vw;
-    height: 100vh;
+  left: 3vw;
+  width: 20vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  color: black;
+
+  align-items: center;
+  animation: fadeIn 0.5s;
+  margin: 5px;
+  justify-content: space-evenly;
+  border-radius: 7px;
+
+  h1 {
+    position: relative;
+    color: black;
+    height: 0;
+    margin-top: 0;
+  }
+
+  .userPic {
     display: flex;
     flex-direction: column;
-    color: black;
-
+    justify-content: center;
     align-items: center;
-    animation: fadeIn 0.5s;
-    margin: 5px;
-    justify-content: space-evenly;
+    //box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    width: 10vw;
+    height: 10vw;
+    overflow: hidden;
+    border-radius: 100%;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+      rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+      rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+
+    img {
+      width: 10vw;
+      height: 10vw;
+      overflow: hidden;
+    }
+
+    img:hover {
+      cursor: pointer;
+    }
+  }
+
+  .userPic:hover {
+    cursor: pointer;
+  }
+
+  .uploadPic {
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 14px;
+    background-color: rgb(74, 119, 236);
+    //box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    margin-top: 0;
+    color: white;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+      rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+      rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  }
+  .uploadPic:hover {
+    cursor: pointer;
+  }
+
+  form {
+    width: 15vw;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 14px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+      rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+
+    margin-top: 0;
+    color: white;
+    padding: 5px;
+    animation: fadeIn 1s;
+
+    input {
+      width: 13vw;
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+        rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    }
+
+    button {
+      background-color: white;
+      border-radius: 5px;
+      border: solid 1px black;
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+        rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+      border-radius: 7px;
+    }
+  }
+
+  .bio {
+    width: 14vw;
+    padding-left: 10px;
+    padding-right: 10px;
+    height: 10vh;
     border-radius: 7px;
+    overflow-y: scroll;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+      rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 
-    h1 {
-        position: relative;
-        color: black;
-        height: 0;
-        margin-top: 0;
+    p {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
+  .controlPanel {
+    border-radius: 7px;
+    display: flex;
+    justify-content: space-around;
+    width: 15vw;
+    height: 10vh;
+    align-items: flex-start;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+      rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+      rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    button {
+      border: solid 2px;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 50px;
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+        rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+      width: 2.5vw;
+      height: 2.5vw;
+      box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+        rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+        rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+      margin-top: 15px;
     }
 
-    .userPic {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        //box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-        width: 10vw;
-        height: 10vw;
-        overflow: hidden;
-        border-radius: 100%;
-        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    .setting {
+      background-color: rgb(245, 191, 79);
+      display: flex;
+      align-items: center;
+      justify-content: center;
 
-        img {
-            width: 10vw;
-            height: 10vw;
-            overflow: hidden;
-
-        }
-
-        img:hover {
-            cursor: pointer;
-        }
+      img {
+        width: 1.5vw;
+      }
     }
 
-    .userPic:hover {
-        cursor: pointer;
+    .friends {
+      background-color: #ff6410;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      img {
+        width: 1.5vw;
+      }
     }
 
-    .uploadPic {
-        padding-left: 10px;
-        padding-right: 10px;
-        border-radius: 14px;
-        background-color: rgb(74, 119, 236);
-        //box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-        margin-top: 0;
-        color: white;
-        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-    }
-    .uploadPic:hover{
-        cursor: pointer;
+    .edit {
+      background-color: rgb(99, 200, 85);
     }
 
-    form {
-        width: 15vw;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        border-radius: 14px;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-        
-        margin-top: 0;
-        color: white;
-        padding: 5px;
-        animation: fadeIn 1s;
-
-        input {
-            width: 13vw;
-            box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-
-
-        }
-
-        button {
-            background-color: white;
-            border-radius: 5px;
-            border: solid 1px black;
-        }
+    .create {
+      background-color: rgb(74, 119, 236);
     }
 
-    .bio {
-        width: 15vw;
-        padding-left: 10px;
-        padding-right: 10px;
-        height: 10vh;
-        border-radius: 7px;
-        overflow-y: scroll;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-
-        p {
-
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
+    .setting:hover,
+    .friends:hover,
+    .edit:hover,
+    .create:hover {
+      transition: 0.5s;
+      padding: 1px;
+      cursor: pointer;
     }
+  }
 
-    .controlPanel {
-        border-radius: 7px;
-        display: flex;
-        justify-content: space-around;
-        width: 15vw;
-        height: 10vh;
-        align-items: flex-start;
-        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-        button {
-            border: solid 2px;
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 50px;
-            box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-            width: 2.5vw;
-            height: 2.5vw;
-            box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-            margin-top: 15px;
-        }
-        
-        .setting {
-            background-color: rgb(245, 191, 79);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            img {
-                width: 1.5vw;
-            }
-        }
-
-        .friends {
-            background-color: #FF6410;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            img {
-
-                width: 1.5vw;
-            }
-        }
-
-        .edit {
-            background-color: rgb(99, 200, 85);
-
-        }
-
-        .create {
-            background-color: rgb(74, 119, 236);
-        }
-
-        .setting:hover,
-        .friends:hover,
-        .edit:hover,
-        .create:hover {
-            transition: 0.5s;
-            padding: 1px;
-            cursor: pointer;
-        }
+  .userInfo {
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+      rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+      rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    border-radius: 7px;
+    width: 14vw;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    div {
+      display: flex;
+      width: 20vw;
+      justify-content: space-evenly;
+      font-size: 20px;
     }
+    .pDiv {
+      display: flex;
 
-    .userInfo {
-        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-        border-radius: 7px;
-        width: 15vw;
-        display: flex;
-        justify-content: space-around;
-        flex-direction: column;
-        align-items: center;
-        padding: 10px;
-        div{
-            display: flex;
-            width: 20vw;
-            justify-content: space-evenly;
-            font-size: 20px;
-        }
-        .pDiv {
-            display: flex;
-
-            p {
-
-                padding-left: 2vw;
-                padding-right: 2vw;
-            }
-        }
+      p {
+        padding-left: 2vw;
+        padding-right: 2vw;
+      }
     }
+  }
 }
 
 @keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
+  0% {
+    opacity: 0;
+  }
 
-    100% {
-        opacity: 1;
-    }
+  100% {
+    opacity: 1;
+  }
 }
 
-@media (max-width:900px) {
-    .UserAside {
-        position: absolute;
-        width: 100vw;
-        left: 0;
-        height: 30vh;
+@media (max-width: 900px) {
+  .UserAside {
+    position: absolute;
+    width: 100vw;
+    left: 0;
+    height: 30vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: rgb(230, 229, 234);
+    border-radius: 7px;
+
+    h1 {
+      font-size: 3vmin;
+      width: 15vw;
+      display: flex;
+    }
+
+    .userPic {
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+        rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+      width: 100px;
+
+      height: 100px;
+      border-radius: 100%;
+    }
+
+    .controlPanel {
+      border-radius: 50px;
+      width: 20vw;
+
+      button {
+        margin: 2px;
+        width: 25px;
+        height: 25px;
+        color: white;
         display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
+        justify-content: center;
         align-items: center;
-        background-color: rgb(230, 229, 234);
-        border-radius: 7px;
+        border-radius: 50px;
+      }
 
-        h1 {
-            font-size: 3vmin;
-            width: 15vw;
-            display: flex;
-        }
+      .setting {
+        background-color: rgb(245, 191, 79);
+      }
 
-        .userPic {
-            box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-            width: 100px;
+      .friends {
+        background-color: #ff6410;
+      }
 
-            height: 100px;
-            border-radius: 100%;
-        }
+      .edit {
+        background-color: green;
+      }
 
-        .controlPanel {
-            border-radius: 50px;
-            width: 20vw;
-
-            button {
-                margin: 2px;
-                width: 25px;
-                height: 25px;
-                color: white;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                border-radius: 50px;
-                box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-
-            }
-
-            .setting {
-                background-color: rgb(245, 191, 79);
-            }
-
-            .friends {
-                background-color: #FF6410;
-            }
-
-            .edit {
-                background-color: green;
-
-            }
-
-            .create {
-                background-color: blue;
-            }
-        }
+      .create {
+        background-color: blue;
+      }
     }
+  }
 }
 
-@media (prefers-color-scheme:dark) {
-    .UserAside {
-        background-color: rgb(28, 28, 28);
-
-        h1 {
-
-            color: #FF6410;
-        }
-
-        .controlPanel {
-
-            .setting {
-                background-color: rgb(245, 191, 79);
-            }
-
-            .friends {
-                background-color: #FF6410;
-            }
-
-            .edit {
-                background-color: #FF6410;
-
-            }
-        }
-
+@media (prefers-color-scheme: dark) {
+  .UserAside {
+    background-color: rgb(28, 28, 28);
+    border: solid 1px white;
+    h1 {
+      color: #ff6410;
     }
 
-    .bio {
-        background-color: rgb(28, 28, 28);
-        color: white;
-    }
+    .controlPanel {
+      .setting {
+        background-color: rgb(245, 191, 79);
+      }
 
-    .userInfo {
-        background-color: rgb(28, 28, 28);
-        color: white;
-    }
+      .friends {
+        background-color: #ff6410;
+      }
 
+      .edit {
+        background-color: #ff6410;
+      }
+    }
+  }
+
+  .bio {
+    background-color: rgb(28, 28, 28);
+    color: white;
+  }
+
+  .userInfo {
+    background-color: rgb(28, 28, 28);
+    color: white;
+  }
 }
