--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -21,7 +21,6 @@
     color: black;
     width: 100vw;
     height: 45vh;
-    border-bottom: solid 1px black;
 
     h1 {
       margin: 0;
@@ -62,11 +61,21 @@
         border-radius: 7px;
         button {
           padding: 5px;
+          padding-left: 10px;
+          padding-right: 10px;
           background-color: white;
           border-color: white;
           margin: 10px;
-          border-radius: 7px;
+          box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px,
+            rgba(0, 0, 0, 0.3) 0px 3px 7px -1px,
+            rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
           border: none;
+          border-radius: 7px;
+        }
+        button:hover {
+          cursor: pointer;
+          background-color: rgb(171, 211, 246);
+          color: white;
         }
       }
     }
